[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "quill"
version = "1.0.5"
authors = [
    { name = "Michael Mueller", email = "michaelmuelleronline@gmx.de" }
]
description = "SQL abstraction framework in Python" # Adjust this to match the actual description if needed
readme = "README.md"
license = { text = "Apache-2.0" } # Specify your license here if available
dynamic = ["dependencies"] # Changed

[project.urls]
"Source Code" = "https://github.com/MichaelMueller/quill.git"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
# Dynamically loads dependencies from requirements.txt
dependencies = { file = ["requirements.txt"] }
